Fix z-index

--- a/src/assets/css/tabs.css
+++ b/src/assets/css/tabs.css
@@ -43,7 +43,7 @@
     width: 100%;
     height: calc(100% - 55px);
     background-color: #fff;
-    z-index: 100000;
+    z-index: 99;
 }
 
 .tabs-fullscreen.container-fluid {
